# mcp_sample

./: Address  README.md  pyproject.toml  refund-policy.md  requirements.txt  test.ipynb
mcp-client/: agent.py  client.py  example_client.py  math_client_langchain.py  test.py  universal.py  universal_llm.py  universal_llm2.py
mcp-server/: address.py  dice.py  hotel.py  refund-policy.py  search.py  thai-wheather.py  weather.py  yfinance_1.py
