[project]
name = "mcp-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.7",
    "mcp[cli]>=1.13.1",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "yfinance>=0.2.65",
]
